# xcore

./: .gitignore  CMakeLists.txt  note.md
src/plugins/: plugin_interface.h
src/plugins/p1/: CMakeLists.txt  plugin.cpp
src/plugins/p2/: CMakeLists.txt  plugin.cpp
src/xcore/: CMakeLists.txt  field.h  main.cpp  station.h  system.h
